# SemanticDB4

./: .gitignore  CMakeLists.txt  README.md  SemanticDB4.sln  SemanticDB4.vcxproj  SemanticDB4.vcxproj.filters  grammar-outline.txt  ubuntu-build-instructions.md
documentation-templates/html/: example-template.html  index-template.html  operator-template.html
documentation-templates/html-menu-version/: example-template.html  operator-template.html  template-settings.txt
documentation-templates/html-menu-version/css/: menu-form-style.css
documentation-templates/html-popup-version/: example-template.html  index-template.html  linkify-template.html  list-element-template.html  menu-template.html  operator-template.html
documentation-templates/html/css/: form-style.css  menu-style.css
src/: SDB.cpp  SDB.h
src/CLI/: SDB_CLI.h  main.cpp
src/CLI/DocsGenerator/: DocsGenerator.cpp  DocsGenerator.h
src/CompoundConstant/: CompoundConstant.cpp  CompoundConstant.h  ConstantFloat.cpp  ConstantFloat.h  ConstantInteger.h  ConstantOperator.cpp  ConstantOperator.h
src/Context/: BoundFunction.cpp  BoundFunction.h  ContextList.cpp  ContextList.h  Frame.h  NewContext.cpp  NewContext.h
src/Function/: SplitJoin.cpp  SplitJoin.h  misc.cpp  misc.h
src/FunctionOperatorMap/: FunctionOperatorMap.cpp  FunctionOperatorMap.h
src/GUI/: SDB_GUI.cpp  SDB_GUI.h
src/GUI/Associated/: ActiveTableDialog.cpp  ActiveTableDialog.h  GenerateDocs.cpp  GenerateDocs.h  GenerateDocs2.cpp  GenerateDocs2.h  GenerateDocsDialog.h  IfThenMachineDialog.h  IfThenOperatorDialog.cpp  IfThenOperatorDialog.h  SearchForOperatorDialog.cpp  SearchForOperatorDialog.h  SearchResultsDialog.cpp  SearchResultsDialog.h  TableDialog.h
src/GUI/Interface/: AppAbout.cpp  AppAbout.h  CommandPanel.cpp  CommandPanel.h  CreateNewFileDialog.cpp  CreateNewFileDialog.h  DumpFrame.cpp  DumpFrame.h  EditPanel.cpp  EditPanel.h  FilteredDumpFrame.cpp  FilteredDumpFrame.h  GeneralOperatorsFrame.cpp  GeneralOperatorsFrame.h  ImageFrame.cpp  ImageFrame.h  ImageViewer.cpp  ImageViewer.h  KetMapDialog.cpp  KetMapDialog.h  LexerTextCtrl.cpp  LexerTextCtrl.h  LinkedTextCtrl.cpp  LinkedTextCtrl.h  OutputFrame.cpp  OutputFrame.h  PrimaryFrame.cpp  PrimaryFrame.h  ResetContextDialog.cpp  ResetContextDialog.h  ResultCanvas.cpp  ResultCanvas.h  SDB.h  SelectFromKetDialog.cpp  SelectFromKetDialog.h  SelectFromListDialog.cpp  SelectFromListDialog.h  SelectFromLiteralOpDialog.cpp  SelectFromLiteralOpDialog.h  SortedListCtrl.cpp  (+3 more)
src/GUI/LexerColorMap/: LexerColorMap.cpp  LexerColorMap.h
src/GUI/OperatorLibrary/: ActiveTableDialog.cpp  ActiveTableDialog.h  GUIOperatorLibrary.cpp  GUIOperatorLibrary.h  GenerateDocs.cpp  GenerateDocs.h  GenerateDocs2.cpp  (+14 more)
src/KetMap/: KetMap.cpp  KetMap.h
src/Operator/: BracketOperator.cpp  CompoundOperator.cpp  EmptyOperator.h  FunctionOperator.cpp  NumericOperator.cpp  NumericOperator.h  OperatorSequence.cpp  OperatorSequence.h  PoweredOperator.cpp  SimpleOperator.h
src/OperatorLibrary/: FunctionOperatorLibrary.cpp  FunctionOperatorLibrary.h  GUIOperatorLibrary.cpp  GUIOperatorLibrary.h  OperatorLibrary.cpp  OperatorLibrary.h  SigmoidLibrary.cpp  SigmoidLibrary.h  TMOperatorLibrary.cpp  TMOperatorLibrary.h
src/OperatorUsageMap/: OperatorUsageMap.cpp  OperatorUsageMap.h
src/Parser/: Driver.cpp  Driver.h  Parser.tab.cpp  Parser.tab.h  Parser.y  Scanner.flex.cpp  Scanner.l  location.hh
src/Sequence/: BaseSequence.h  ForStatement.h  IfElseStatement.h  Ket.cpp  Ket.h  LearnRule.cpp  LearnRule.h  MultiLearnRule.cpp  MultiLearnRule.h  MultiSelfKet.h  OperatorWithSequence.cpp  OperatorWithSequence.h  SelfKet.h  Sequence.cpp  Sequence.h  Superposition.cpp  Superposition.h  SuperpositionIter.cpp  SuperpositionIter.h  WhileStatement.h
src/core/: SDB_core.h
sw-examples/: English-modifiers.sw4  Fibonacci.sw3  I-am.sw4  Kanerva-implementation.sw4  bottles-of-beer.sw3  collatz.sw4  family-display.sw4  family-relations.sw3  family-tree.sw3  fizz-buzz.sw4  graph-prime-factors.sw4  greetings.sw4  modifiers.sw4  n-grams.sw4  numbers-to-words.sw3  pack-and-unpack.sw4  patch-map.sw4  plural.sw3  predict-animals-from-their-sounds.sw4  predict-integer-sequence-fragments.sw4  production-example.sw4  sdb-simple-parser.sw4  simple-chemistry.sw3  syntax-highlight.sw4  temperature-conversion.sw3  temperature-conversion.sw4  testing-apply-function.sw4  the-template-machine-project.sw4  tmp--bottles-of-beer.sw3  transitive-operators.sw4
syntax-colors/: style-dark.sw  style-default.sw  style-light.sw  style-testing.sw
(+56 files in other folders)
